--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="container card">
               <div class="row project-reverse">
                 <div class="col-lg-6 col-md-6 col-sm-12 project-intro">
-                  <div class="mx-5">
+                  <div class="mx-4" style="width: 85%">
                     <h3 class="keep-all"><strong>Laushu 勞贖</strong></h3>
                     <p>
                       勞報單數位化系統設計優化專案，讓財務工作既快樂又自由。
@@ -189,7 +189,7 @@
                 </div>
 
                 <div class="col-lg-6 col-md-6 col-sm-12 project-intro">
-                  <div class="mx-5">
+                  <div class="mx-4" style="width: 85%">
                     <h3 class="keep-all">
                       <strong> NCCUSpace 政大圖書館場地管理系統</strong>
                     </h3>
@@ -225,7 +225,7 @@
             <div class="container card">
               <div class="row project-reverse">
                 <div class="col-lg-6 col-md-6 col-sm-12 project-intro">
-                  <div class="mx-5">
+                  <div class="mx-4" style="width: 85%">
                     <h3 class="keep-all">
                       <strong> Pocket World AR 口袋世界擴增實境</strong>
                     </h3>
@@ -299,7 +299,7 @@
                 </div>
 
                 <div class="col-lg-6 col-md-6 col-sm-12 project-intro">
-                  <div class="mx-5">
+                  <div class="mx-4" style="width: 85%">
                     <h3 class="keep-all"><strong> MoodLight 心晴</strong></h3>
                     <p>
                       結合大數據應用，透過快樂日記與快樂清單推薦，有效排解使用者負面情緒，給予自癒能量。
@@ -333,7 +333,7 @@
             <div class="container card">
               <div class="row project-reverse">
                 <div class="col-lg-6 col-md-6 col-sm-12 project-intro">
-                  <div class="mx-5">
+                  <div class="mx-4" style="width: 85%">
                     <h3 class="keep-all">
                       <strong> ex.share 經驗分享平台</strong>
                     </h3>
@@ -414,7 +414,7 @@
                   ></div>
                 </a>
                 <div class="col-lg-12 col-md-12 col-sm-12 project-intro">
-                  <div class="mx-5">
+                  <div class="mx-4" style="width: 85%">
                     <h3 class="keep-all">
                       <strong>A Dream Within a Dream 夢中夢</strong>
                     </h3>
@@ -460,7 +460,7 @@
                   ></div>
                 </a>
                 <div class="col-lg-12 col-md-12 col-sm-12 project-intro">
-                  <div class="mx-5">
+                  <div class="mx-4" style="width: 85%">
                     <h3 class="keep-all">
                       <strong>CreateArtTalk 藝擴體工作室</strong>
                     </h3>
